Resolve some horizontal scrolling confusion
Fix bad rules in themes, measure width correctly.

--- a/theme/ambiance.css
+++ b/theme/ambiance.css
@@ -62,10 +62,6 @@
   padding: 0 5px;
 }
 
-.cm-s-ambiance .CodeMirror-lines {
-  
-}
-
 .cm-s-ambiance .CodeMirror-lines .CodeMirror-cursor {
   border-left: 1px solid #7991E8;
 }
